# nexus-agent

./: .dockerignore  .env  .env.example  .gcloudignore  .gitignore  Dockerfile  README.md  app.py  eval_results.json  langgraph.json  pyproject.toml
.streamlit/: config.toml
scripts/: chat.py  eval.py  ingest.py
src/nexus/: __init__.py  config.py  graph.py  prompts.py  state.py
src/nexus/agents/: __init__.py  analyst.py  architect.py  librarian.py  scribe.py
src/nexus/connectors/: confluence.py  freshservice.py  jira_connector.py
src/nexus/rag/: chunker.py  vectorstore.py
src/nexus/tools/: __init__.py  freshservice.py  jira_tools.py  retrieval.py
tests/: test_chunker.py  test_graph.py
