[project]
name = "nexus"
version = "0.1.0"
description = "Multi-agent IT operations intelligence system powered by LangGraph and Claude"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.4",
    "langgraph-supervisor>=0.0.7",
    "langchain-anthropic>=0.3",
    "langchain-community>=0.3",
    "langchain-chroma>=0.2",
    "langsmith>=0.2",
    "chromadb>=0.5",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]
server = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py311"
